重新搭建学习目录架子

--- a/个人说明.md
+++ b/个人说明.md
@@ -1,8 +1,1 @@
-# 个人说明简介
-    今天是2019.6.4日，本人文采不好粗略介绍自己，98年12月出生快99年的人了，但是我喜欢前端，喜欢做很多有趣的事情前端
-是自己自学的，之前都在军营呆了两年，我河北唐山人。
-    俗话说的好，好人不当兵吧，及时醒悟，因为要找一个喜欢的岗位去学，就学了编程，自己就入了前端，前端是一个不断学习的
-岗位，对于自己的技术也将在自己的github上面上传，因为关联好个人的仓库，在哪里
-上传代码都可以了，公司，自己笔记本连着学习吧，因为前端就是一个不断学习的，相信自己继续前行。
-
-
+# 2019 我进入前端工作的一年
