--- a/commonality/正则表达式.md
+++ b/commonality/正则表达式.md
@@ -1,5 +1,4 @@
-# 正则大全  ![](https://img.shields.io/badge/状态-积极更新-673ab7.svg) ![](https://img.shields.io/badge/已收录-47条-4caf50.svg) ![](https://img.shields.io/badge/license-MIT-F44336.svg)
-:whale:图形界面: https://any86.github.io/any-rule/
+## 图形界面: https://any86.github.io/any-rule/
 
 
 ## html注释
@@ -57,7 +56,7 @@
 /^([1-9]{1})(\d{15}|\d{18})$/
 ```
 
-## 中文姓名
+## 中文姓名 
 ```javascript
 /^([\u4e00-\u9fa5·]{2,16})$/
 ```
